# release-inator

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: aggregate-release.yml
releases/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v2.0.0.md
src/: lib.rs  main.rs
src/aggregator/: changelog_generator.rs  commit_analyzer.rs  mod.rs  release_fetcher.rs
src/config/: types.rs
src/github/: client.rs  types.rs
templates/: default.md.hbs
