[package]
name = "release-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
# GitHub API
octocrab = "0.32"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templates
handlebars = "5.0"

# Regex for commit parsing
regex = "1.10"

# Markdown processing (optional, for enhanced output)
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "11.0"

[dev-dependencies]
mockito = "1.2"
pretty_assertions = "1.4"
